# Triton-Kernel-Study

./: .gitignore  main.py  pyproject.toml
examples/practitioners_guide/: A_Practitioners_Guide_to_Triton.ipynb
kernels/dropout/: dropout.py  test_dropout.py
kernels/layer_norm/: layer_norm.py
kernels/matmul/: matmul.py  test_matmul.py
kernels/softmax/: bench_softmax.py  softmax.py  test_softmax.py
kernels/vector_add/: test_vector_add.py  vector_add.py
practitioners_guide/: A_Practitioners_Guide_to_Triton.ipynb
