[project]
name = "triton-kernel-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "numpy<2.0.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "triton>=3.5.1",
    "triton-util>=0.0.2",
]
